# advent-of-code-2022

./: Cargo.toml  README.md
src/: args.rs  main.rs  solver.rs
src/day1/: mod.rs
src/day10/: mod.rs
src/day2/: mod.rs
src/day3/: mod.rs
src/day4/: mod.rs
src/day5/: mod.rs
src/day6/: README.md  mod.rs
src/day7/: mod.rs
src/day8/: mod.rs
src/day9/: mod.rs
