[package]
name = "advent-of-code-2022"
version = "0.1.0"
authors = ["Jonathan Guillotte-Blouin <jonathan.guillotte.blouin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4", features = ["derive"] }
unbounded-interval-tree = "1.1"
regex = "1.10"
lazy_static = "1.4"
